--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,19 @@
         </configuration>
       </plugin>
       
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>2.2.2</version>
+      </plugin>
+      
     </plugins>
   </build>
+  
+  <scm>
+    <connection>scm:git:git@github.com:goosetav/JavaUglifyJS.git</connection>
+    <url>scm:git:git@github.com:goosetav/JavaUglifyJS.git</url>
+    <developerConnection>scm:git:git@github.com:goosetav/JavaUglifyJS.git</developerConnection>
+  </scm>
   
 </project>
