--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   
   <groupId>org.eigenspace.uglify</groupId>
   <artifactId>JavaUglifyJS</artifactId>
-  <version>1.0</version>
+  <version>1.1-SNAPSHOT</version>
   <packaging>jar</packaging>
   
   <name>JavaUglifyJS</name>
